--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    color: aliceblue;
 }
 
 .static-location, .temp, {
@@ -18,6 +19,10 @@ body {
 
 .app-body {
     display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    background: rgb(1,1,11);
+    background: linear-gradient(90deg, rgba(1,1,11,1) 0%, rgba(0,0,0,0.4448967086834734) 46%, rgba(0,0,0,0.10547969187675066) 100%);
 }
 
 header {
@@ -32,7 +37,7 @@ form {
     align-items: center;
     display: flex;
     width: 100%;
-    max-width: 350px;
+    max-width: 300px;
     border-radius: 16px;
     padding: 15px 15px; 
     font-size: 25px;
@@ -42,8 +47,8 @@ form {
 
 main {
     padding: 25px 25px 50px;
-    display: block;
-    margin-top:100px;
+    display: flex;
+    margin: auto;
     align-items: center;
     text-align: center;
 }
