--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     background-position: center center;
     background-attachment: fixed;
     background-size: cover;    
-    opacity: .7;
+    opacity: .9;
 }
 
 * {
@@ -22,7 +22,7 @@ body {
     flex-direction: column;
     min-height: 100vh;
     background: rgb(1,1,11);
-    background: linear-gradient(90deg, rgba(1,1,11,1) 0%, rgba(0,0,0,0.4448967086834734) 46%, rgba(0,0,0,0.10547969187675066) 100%);
+    background: linear-gradient(0deg, rgba(1,1,11,1) 0%, rgba(0,0,0,0.2448967086834734) 46%, rgba(0,0,0,0.10547969187675066) 100%);
 }
 
 header {
@@ -36,10 +36,10 @@ form {
     justify-content: center;
     align-items: center;
     display: flex;
-    width: 100%;
+    width: 80%;
     max-width: 300px;
-    border-radius: 16px;
-    padding: 15px 15px; 
+    border-radius: 15px;
+    padding: 15px; 
     font-size: 25px;
     font-weight: 320;
     transition: 0.3s ease-out;
@@ -49,6 +49,42 @@ main {
     padding: 25px 25px 50px;
     display: flex;
     margin: auto;
+    flex-direction: column;
     align-items: center;
     text-align: center;
+}
+
+.static-location .city {
+color: white;
+font-size: 45px;
+font-weight: 550;
+margin-bottom: 8px;
+text-shadow: 2px 5px black;
+}
+
+.date {
+    color: white;
+    font-size: 22px;
+    text-shadow: 2px 2px black;
+}
+
+.current .temp {
+    color: white;
+    font-size: 95px;
+    font-weight: 900;
+    text-shadow: 2px 8px black;
+}
+
+.current .condition {
+    color: white;
+    font-size: 35px;
+    font-weight: 600;
+    text-shadow: 2px 6px black;
+}
+
+.current .high-low {
+    color: white;
+    font-size: 30px;
+    font-weight: 500;
+    text-shadow: 2px 5px black;
 }
