--- a/styles.css
+++ b/styles.css
@@ -59,32 +59,33 @@ color: white;
 font-size: 45px;
 font-weight: 550;
 margin-bottom: 8px;
-text-shadow: 2px 5px black;
+text-shadow: 2px 2px 10px black;
 }
 
 .date {
     color: white;
-    font-size: 22px;
-    text-shadow: 2px 2px black;
+    font-size: 18px;
+    text-shadow: 2px 2px 12px black;
 }
 
 .current .temp {
     color: white;
     font-size: 95px;
     font-weight: 900;
-    text-shadow: 2px 8px black;
+    text-shadow: 2px 2px 12px black;
 }
 
 .current .condition {
     color: white;
-    font-size: 35px;
+    font-size: 37px;
     font-weight: 600;
-    text-shadow: 2px 6px black;
+    text-shadow: 2px 2px 12px black;
 }
 
 .current .high-low {
     color: white;
-    font-size: 30px;
+    font-size: 22px;
+    margin: 6px;
     font-weight: 500;
-    text-shadow: 2px 5px black;
+    text-shadow: 2px 2px 12px black;
 }
