--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,7 @@ header {
     justify-content: center;
     align-items: center;
     display: flex;
+    text-align: center;
     padding: 60px 20px 20px;
 }
 
@@ -36,7 +37,8 @@ form {
     justify-content: center;
     align-items: center;
     display: flex;
-    width: 80%;
+    text-align: center;
+    width: 100%;
     max-width: 300px;
     border-radius: 15px;
     padding: 15px; 
